--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
     <td>100</td>
     <td style="color: blue;">View</td>
   </tr>
+    <tr style="font-family: Arial;" bordercolor="grey" bgcolor="#e0e0e0">
+    <td>02/23/2024</td>
+    <td>Prepare</td>
+    <td>IXL Skills Reconstruction: Q.1 and Q.2</td>
+    <td>Late</td>
+    <td>90/100</td>
+    <td>90</td>
+    <td style="color: blue;">View</td>
+  </tr>
 </table>
   <h3 style="font-family: arial;">Grades last updated on: 3/6/2024</h1>
 </head>
